(byt3n33dl3) DELL

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
-# repo:     pxcs/craxsrat_v7
+# repo:     byt3n33dl3/CarpaAlko
 # filename: FUNDING.YML
 # don't want money ( doain aja biar gak dipolisikan )
-# offensive cyber-attacks
+# offensive cybermedia
 
-custom: ["https://x.com/pxsceet"]
+custom: ["https://x.com/byt3n33dl3"]
